[gd_scene load_steps=4 format=2]

[ext_resource path="res://CarDraw.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheet_vehicles.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.5763
height = 69.743

[node name="CarDraw" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
rotation = 1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 290, 0, 72, 132 )

[node name="Ghost" type="Sprite" parent="."]
show_behind_parent = true
rotation = 1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 290, 0, 72, 132 )

[node name="WheelRear" type="Polygon2D" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -10, -4, 10, -4, 10, 4, -10, 4 )

[node name="WheelFront" type="Polygon2D" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -10, -4, 10, -4, 10, 4, -10, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
